<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imgLogoLogin"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/content_description_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo" />

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_title"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Correo -->
        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="?attr/colorSecondary"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <!-- Contraseña -->
        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="?attr/colorSecondary"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Botón login -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/login_title"
            android:textColor="?attr/colorOnPrimary" />

        <!-- Ir a registro -->
        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_have_an_account"
            android:textColor="?attr/colorPrimary" />

    </LinearLayout>

</ScrollView>
