<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_de_usuario"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

        <!-- Nombre -->
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:hint="Nombre completo"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <!-- Telefono -->
        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:hint="Teléfono"
            android:inputType="textPhonetic"
            android:minHeight="48dp"
            tools:ignore="HardcodedText" />

        <!-- Correo -->
        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="HardcodedText" />

        <!-- Contraseña -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Confirmar contraseña -->
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Botón registrar -->
        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrarse"
            android:layout_marginBottom="16dp"/>

        <!-- Ir a login -->
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ya_tienes_cuenta_inicia_sesi_n"
            android:textColor="@android:color/holo_blue_dark"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>